# bmstu_kafka_transport

./: Makefile  README.md  docker-compose.yml  test_server.py
transport/: Cargo.toml  Dockerfile
transport/.cargo/: config.toml
transport/common/: Cargo.toml
transport/common/src/: lib.rs
transport/consume/: Cargo.toml
transport/consume/src/: command.rs  consumer.rs  main.rs  message_builder.rs  sender.rs
transport/produce/: Cargo.toml
transport/produce/src/: config.rs  main.rs  producer.rs
transport/produce/src/handler/: mod.rs  produce_segments.rs
transport/split/: Cargo.toml
transport/split/src/: config.rs  main.rs
transport/split/src/handler/: mod.rs  send_message.rs
