[workspace]
members = [
    "split",
    "produce",
    "consume",
    "common",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5.1", features = ["derive"] }
warp = "0.3"
rdkafka = { version = "0.25", features = ["cmake-build"] }
log = "0.4.21"
anyhow = {version = "1"}
chrono = "0.4.34"
