[package]
name = "consume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { workspace = true }
tokio = {workspace = true }
log = { workspace = true }
clap = { workspace = true }
serde = {workspace = true}
serde_json = {workspace = true}
reqwest = { workspace = true }
anyhow = {workspace=true}
chrono = {workspace=true}

common = { path = "../common" }

tokio-stream = {version = "0.1", features = ["time"]}
itertools = "0.12.1"
