[package]
name = "produce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { workspace = true }
warp =  { workspace = true }
serde =  { workspace = true }
clap = { workspace = true }
rdkafka = { workspace = true }
anyhow = {workspace = true}
log = {workspace = true}

common = {path="../common"}